Bug fix: Add text overflow in last column

--- a/DotNetNuke.Authentication.Azure.B2C/AzureADB2C.Web/src/components/profileMappings/profileMappingRow/style.less
+++ b/DotNetNuke.Authentication.Azure.B2C/AzureADB2C.Web/src/components/profileMappings/profileMappingRow/style.less
@@ -28,8 +28,11 @@
                 float: left;
             }
             .item-row-b2cextension {
-                width: 10%;
+                width: 30%;
                 float: left;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
             .item-row-primary {
                 width: 10%;
