--- a/DotNetNuke.Authentication.Azure.B2C/AzureADB2C.Web/src/components/roleMappings/roleMappingRow/style.less
+++ b/DotNetNuke.Authentication.Azure.B2C/AzureADB2C.Web/src/components/roleMappings/roleMappingRow/style.less
@@ -24,8 +24,11 @@
                 word-break: break-all;
             }
             .item-row-b2crole {
-                width: 20%;
+                width: 35%;
                 float: left;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
             .item-row-primary {
                 width: 10%;
